--- a/language_test/bedrock/upcoming/en_US.lang
+++ b/language_test/bedrock/upcoming/en_US.lang
@@ -1,6 +1,8 @@
-﻿entity.glow_squid.name=Glow Squid
+﻿entity.axolotl.name=Axolotl
+entity.glow_squid.name=Glow Squid
 entity.goat.name=Goat
 item.goat_horn.name=Goat Horn
+item.spawn_egg.entity.axolotl.name=Spawn Axolotl
 item.spawn_egg.entity.goat.name=Spawn Goat
 tile.powder_snow.name=Powder Snow
 item.copper_ingot.name=Copper Ingot
@@ -35,6 +37,7 @@ tile.oxidized_copper.name=Oxidized Copper
 tile.waxed_copper.name=Waxed Copper Block
 tile.waxed_exposed_copper.name=Waxed Exposed Copper
 tile.waxed_weathered_copper.name=Waxed Weathered Copper
+tile.waxed_oxidized_copper.name=Waxed Oxidized Copper
 
 tile.cut_copper.name=Cut Copper
 tile.exposed_cut_copper.name=Exposed Cut Copper
@@ -43,6 +46,7 @@ tile.oxidized_cut_copper.name=Oxidized Cut Copper
 tile.waxed_cut_copper.name=Waxed Cut Copper
 tile.waxed_exposed_cut_copper.name=Waxed Exposed Cut Copper
 tile.waxed_weathered_cut_copper.name=Waxed Weathered Cut Copper
+tile.waxed_oxidized_cut_copper.name=Waxed Oxidized Cut Copper
 
 tile.cut_copper_stairs.name=Cut Copper Stairs
 tile.exposed_cut_copper_stairs.name=Exposed Cut Copper Stairs
@@ -51,6 +55,7 @@ tile.oxidized_cut_copper_stairs.name=Oxidized Cut Copper Stairs
 tile.waxed_cut_copper_stairs.name=Waxed Cut Copper Stairs
 tile.waxed_exposed_cut_copper_stairs.name=Waxed Exposed Cut Copper Stairs
 tile.waxed_weathered_cut_copper_stairs.name=Waxed Weathered Cut Copper Stairs
+tile.waxed_oxidized_cut_copper_stairs.name=Waxed Oxidized Cut Copper Stairs
 
 tile.cut_copper_slab.name=Cut Copper Slab
 tile.exposed_cut_copper_slab.name=Exposed Cut Copper Slab
@@ -59,6 +64,41 @@ tile.oxidized_cut_copper_slab.name=Oxidized Cut Copper Slab
 tile.waxed_cut_copper_slab.name=Waxed Cut Copper Slab
 tile.waxed_exposed_cut_copper_slab.name=Waxed Exposed Cut Copper Slab
 tile.waxed_weathered_cut_copper_slab.name=Waxed Weathered Cut Copper Slab
+tile.waxed_oxidized_cut_copper_slab.name=Waxed Oxidized Cut Copper Slab
+
+tile.deepslate.name=Deepslate
+tile.cobbled_deepslate.name=Cobbled Deepslate
+tile.cobbled_deepslate_slab.name=Cobbled Deepslate Slab
+tile.cobbled_deepslate_stairs.name=Cobbled Deepslate Stairs
+tile.cobbled_deepslate_wall.name=Cobbled Deepslate Wall
+tile.polished_deepslate.name=Polished Deepslate
+tile.polished_deepslate_slab.name=Polished Deepslate Slab
+tile.polished_deepslate_stairs.name=Polished Deepslate Stairs
+tile.polished_deepslate_wall.name=Polished Deepslate Wall
+tile.deepslate_tiles.name=Deepslate Tiles
+tile.deepslate_tile_slab.name=Deepslate Tile Slab
+tile.deepslate_tile_stairs.name=Deepslate Tile Stairs
+tile.deepslate_tile_wall.name=Deepslate Tile Wall
+tile.deepslate_bricks.name=Deepslate Bricks
+tile.deepslate_brick_slab.name=Deepslate Brick Slab
+tile.deepslate_brick_stairs.name=Deepslate Brick Stairs
+tile.deepslate_brick_wall.name=Deepslate Brick Wall
+tile.chiseled_deepslate.name=Chiseled Deepslate
+tile.cobbled_deepslate_double_slab.name=Cobbled Deepslate Double Slab
+tile.polished_deepslate_double_slab.name=Polished Deepslate Double Slab
+tile.deepslate_tile_double_slab.name=Deepslate Tile Double Slab
+tile.deepslate_brick_double_slab.name=Deepslate Brick Double Slab
+tile.deepslate_lapis_ore.name=Deepslate Lapis Ore
+tile.deepslate_iron_ore.name=Deepslate Iron Ore
+tile.deepslate_gold_ore.name=Deepslate Gold Ore
+tile.deepslate_redstone_ore.name=Deepslate Redstone Ore
+tile.lit_deepslate_redstone_ore.name=Lit Deepslate Redstone Ore
+tile.deepslate_diamond_ore.name=Deepslate Diamond Ore
+tile.deepslate_coal_ore.name=Deepslate Coal Ore
+tile.deepslate_emerald_ore.name=Deepslate Emerald Ore
+tile.deepslate_copper_ore.name=Deepslate Copper Ore
+tile.cracked_deepslate_tiles.name=Cracked Deepslate Tiles
+tile.cracked_deepslate_bricks.name=Cracked Deepslate Bricks
 itemGroup.name.copper=Copper
 hudScreen.tooltip.waxOn=Wax On
 hudScreen.tooltip.waxOff=Wax Off
@@ -68,3 +108,11 @@ item.glow_ink_sac.name=Glow Ink Sac
 item.glow_frame.name=Glow Item Frame
 item.spawn_egg.entity.glow_squid.name=Spawn Glow Squid
 tile.glow_lichen.name=Glow Lichen
+item.bucketAxolotl.name=Bucket of Axolotl
+item.axolotlAdultBodySingle.name=Adult %1$s Axolotl
+item.axolotlBabyBodySingle.name=Baby %1$s Axolotl
+item.axolotlColorLucy.name=Leucistic
+item.axolotlColorCyan.name=Cyan
+item.axolotlColorGold.name=Gold
+item.axolotlColorWild.name=Brown
+item.axolotlColorBlue.name=Blue
